assets/css/style.css
/* == GLOBAL STYLES == */
*{
    /*instructing broswer to account for any border and padding in specified element's width */
    margin: 0;
    padding: 0;
    box-sizing: border-box;
   
    /* font style */
    font-family: 'Audiowide', cursive, monospace;
    color: #032B43;
}

body{
    background-color: white;
}

/* Google home image */
.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 400,
  'GRAD' 0,
  'opsz' 48;

  font-size: clamp(24px, 2.5vw, 36px) !important; /*overrides default font size defined by google*/
}

/* == HEADER ELEMENTS STYLES == */
header {
    /*flex display settings */
    display: flex;
    justify-content: center; /* centers horizontally in a viewport */
    align-items: center;     /* centers vertically within a flex row */

    background-color: #FFBA08;
}

header h1 {
    font-size: 32px;
    flex-grow: 1;
    text-align: center;
    display: block; /* changes to display:none when game.html is loaded */
}

.home {
    padding-left: 12px;
}

.game-stats {
    display: none; /* changes to display:block when game.html is loaded*/
    flex-grow: 1;
}

/* == MAIN ELEMENT STYLES == */
.wave-container{
    height: clamp(50px,2.5vw,100px);
    background-image: url("/assets/images/wavesOpacity.svg");
}

/* == levels.html page STYLES == */

/* level selector wrapper style */
.level-selector-wrapper {
    display: flex;
    flex-wrap:wrap ;
    justify-content: center;
    gap:10px 5px;
}
/* level selector circles style */
.level-selector {
    background: #ffdd92;
    border-radius: 50%;
    width: 50px;
    height: 50px;
}

/* slider display wrapper style */
.slider-wrapper {
    /* grid properties */
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-row-gap: 10px;

    /* div properties */
    max-width: fit-content;
    text-align: right;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
    margin-top: 30px;
}

